--- a/styles/index.css
+++ b/styles/index.css
@@ -876,12 +876,12 @@ ul li a:hover::before{
     font-size: 30px;
     font-weight: 700;
     margin-top: 10px;
-    color: white;
+    color: #0b0101;
   }
 
   .myskill h3 {
     font-size: 10px;
-    color: white;
+    color: #0b0101;
   }
 
   .myskill li {
